[package]
name = "tg-support-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
dotenv = "0.15.0"
reqwest = "0.12.24"
colored = "3.0.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
docx-rs = "0.4.18"
chrono = "0.4.42"
